name:                Homespun
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Chadtech
maintainer:          chadtech0@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Homespun
  main-is:             Main.hs
  other-modules:
    Homespun.Compiler
    Homespun.Package
    Reporting.Suggest
    Terminal.Args
    Terminal.Args.Chomp
    Terminal.Args.Error
    Terminal.Args.Internal
  -- other-extensions:
  build-depends:       
    ansi-terminal >= 0.8 && < 0.9,
    ansi-wl-pprint >= 0.6.8 && < 0.7,
    base >=4.11 && <4.12,
    directory >= 1.2.3.0 && < 2.0,
    edit-distance >= 0.2 && < 0.3,
    filepath >= 1 && < 2.0,
    text >= 1 && < 2,
    time


    
  hs-source-dirs:      src
  default-language:    Haskell2010
